container-log-pod-info.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-inter-pod
  labels:
    app: jedi
spec:
  restartPolicy: Never
  containers:
    - name: myapp
      image: busybox
      ports:
        - containerPort: 8080
          name: http
      resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
      command: ["echo"]
      args: ["$(MY_NODE_NAME) $(MY_POD_NAME) $(MY_POD_IP)"]
