fix-jedi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"jedi-service","namespace":"vader"},"spec":{"containers":[{"image":"linuxacademycontent/candy-service:2","livenessProbe":{"httpGet":{"path":"/health","port":8081}},"name":"the-container"}]}}
  creationTimestamp: "2020-02-06T16:59:26Z"
  name: jedi-service
  namespace: vader
  resourceVersion: "2521"
  selfLink: /api/v1/namespaces/vader/pods/jedi-service
  uid: 646b61e7-c2e0-4614-acde-8213f96a7375
spec:
  containers:
  - name: jedi-pod-fix
    image: linuxacademycontent/candy-service:2
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 3
      httpGet:
        path: /healthz
        port: 8081
        scheme: HTTP
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
