multicontainer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fruit-service
  labels:
    name: fruit-service
spec:
  containers:
  - name: legacy-fruit-service
    image: linuxacademycontent/legacy-fruit-service:1
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8775
  - name: haproxy
    image: haproxy:1.7
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
      - mountPath: /usr/local/etc/haproxy
        name: config-volume
  volumes:
    - name: config-volume
      configMap:
          name: fruit-service-ambassador-config
