pod-using-pvc.yaml
kind: Pod
apiVersion: v1
metadata:
  name: my-pod
spec:
  containers:
  - name: nginx
    image: busybox
    command: ['sh', '-c', 'echo Hello Kubernetes! > /mnt/data/message.txt && sleep 3600']
    volumeMounts:
    - mountPath: "/mnt/data"
      name: my-data
  volumes:
  - name: my-data
    persistentVolumeClaim:
      claimName: my-pvc
