pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-app
    image: bitnami/nginx
    ports:
      - containerPort: 8080
    volumeMounts:
      - name: secret
        mountPath: "/etc/secrets"
  volumes:
    - name: secret
      secret:
        secretName: mysecret-config
