jedi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jedi-svc
spec:
  type: NodePort
  selector:
    app: jedi
  ports:
  - port: 80
    targetPort: 8080
