yoda-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: yoda-svc
spec:
  selector:
    app: yoda
  ports:
  - port: 80
    targetPort: 8080
